============================================
modEvA v3.10 (committed 2023-11-10)
============================================

## New functions:

* quantReclass

* similarity


## Modified functions:

* modevaMethods
- added methods for similarity()


============================================
modEvA v3.9.6 (committed 2023-10-04)
============================================

## Modified functions:

* Dsquared
- warning emitted and Dsquared calculated correctly even when family binomial and response not binary (following bug report by Elic M. Weitzel)

* varImp
- metric reported in console result
- absolute (rather than original) values now returned for z value (if model is glm)

* AUC
- added 'GiniCoefficient' to outputs when simplif=FALSE


============================================
modEvA v3.9.5 (committed 2023-01-02)
============================================

## Modified functions:

* varImp
- barplot now also gets error bars replotted on top of points if plot.points=TRUE
- implemented for models of class "lbart" and "pbart" of pkg 'BART' (though not ideal for group.cats = TRUE)
- group.cats default now FALSE
- started implementation for flexBART models (still imperfect because object has no var names; issue submitted at https://github.com/skdeshpande91/flexBART/issues/8)


============================================
modEvA v3.9.4 (committed 2023-04-26)
============================================

## Modified functions:

* varImp
- new argument group.cats=TRUE, for BART models, to sum up the contributions of (one-hot encoded) categorical variable levels


============================================
modEvA v3.9.3 (committed 2023-04-14) -> CRAN
============================================

## Modified functions:

* AUC
- 'method' default now NULL, to avoid unsolicited warning when curve="PR" because default method was "rank"


## Other modified files:

* varImp.Rd