@@ -1,8 +1,8 @@
 Package: modEvA
 Type: Package
 Title: Model Evaluation and Analysis
-Version: 3.10
-Date: 2023-11-10
+Version: 3.11
+Date: 2023-11-25
 Author: Barbosa A.M., Brown J.A., Jimenez-Valverde A., Real R.
 Maintainer: A. Marcia Barbosa <ana.marcia.barbosa@gmail.com>
 Imports: graphics, grDevices, stats, methods, terra
@@ -12,7 +12,7 @@ LazyData: yes
 License: GPL-3
 URL: http://modeva.r-forge.r-project.org/
 NeedsCompilation: no
-Packaged: 2023-11-10 15:47:52 UTC; marcia
+Packaged: 2023-11-25 19:38:54 UTC; marcia
 Depends: R (>= 2.10)
 Repository: CRAN
-Date/Publication: 2023-11-12 18:13:21 UTC
+Date/Publication: 2023-11-25 21:00:02 UTC
