@@ -10,8 +10,8 @@ The modEvA package can analyse species distribution models and evaluate their pe
 \tabular{ll}{
 Package: \tab modEvA\cr
 Type: \tab Package\cr
-Version: \tab 3.10\cr
-Date: \tab 2023-11-10\cr
+Version: \tab 3.11\cr
+Date: \tab 2023-11-25\cr
 License: \tab GPL-3\cr
 }
 }
